tests/mytests/error/fun_error2.vsl
PROTO VOID foo(n)

FUNC INT main() {
    test
    test := 5
    RETURN test
}

FUNC VOID foo() {
    test
    test := 5
}
